...
    <string name="active">Active</string>
    <string name="save_question">Save Question</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="toast_empty_challenge_name">You did not enter a challenge name…</string>
    <string name="toast_one_question">Please add at least one question…</string>
    <string name="toast_empty_question_name">You did not enter a question name</string>
    <string name="toast_empty_challenge_question">You did not enter a challenge question"</string>
    <string name="toast_empty_challenge_answer">You did not enter a challenge answer</string>
    <string name="toast_select_a_question">Please select a question first…</string>
    <string name="toast_success_challenge_saved">Challenge saved!</string>
    <string name="toast_success_challenge_deleted">Challenge deleted!</string>
    <string name="toast_error_challenge_delete">Ups! Error while deleting challenge…</string>
    <string name="toast_error_challenge_exists_already">This challenge exists already…</string>
    <string name="toast_error_no_saved_game">There is no challenge to continue!</string>
...
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="card_deck">Card Deck:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="toast_error_difficulty">Please select a difficulty…</string>
    <string name="toast_error_save_data">Ups! Error while saving data occurred…</string>
    <string name="toast_error_missing_data">Ups! Error while loading data occurred…</string>
    <string name="toast_error_corrupt_data">Ups! Retrieved data seems to be invalid…</string>
    <string name="dialog_delete_question">Delete this question?</string>
    <string name="dialog_delete_challenge">Delete this challenge?</string>
    <string name="dialog_exit_challenge">Exit challenge?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
</resources>
...
