...
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditQuestion" />

    <EditText
        android:id="@+id/editTextQuestionNameEdit"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveQuestionEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuestionNameEdit">

...
            android:gravity="center"
            android:text="Question:"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextQuestionEdit"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxHeight="35dp"
            android:scrollbars="vertical" />
...
            android:gravity="center"
            android:text="Answer:"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAnswerEdit"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxHeight="35dp"
            android:scrollbars="vertical" />
...
